--- a/package.json
+++ b/package.json
@@ -3,26 +3,43 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@burner-wallet/burner-connect-provider": "^0.1.1",
     "@ethersproject/providers": "^5.5.3",
+    "@portis/web3": "^4.0.7",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.4.0",
     "@types/node": "^16.11.21",
-    "@types/react": "^17.0.38",
+    "@types/react": "^17.0.45",
     "@types/react-dom": "^17.0.11",
     "@types/react-router-dom": "^5.3.3",
+    "@walletconnect/web3-provider": "^1.7.8",
+    "assert": "^2.0.0",
+    "authereum": "^0.1.14",
+    "bitski": "^0.14.2",
+    "crypto-browserify": "^3.12.0",
+    "fortmatic": "^2.4.0",
+    "https-browserify": "^1.0.0",
+    "next-tick": "^1.1.0",
+    "os-browserify": "^0.3.0",
     "react": "^17.0.2",
+    "react-app-rewired": "^2.2.1",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-toastify": "^9.0.3",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
     "typescript": "^4.5.5",
-    "web-vitals": "^2.1.4"
+    "url": "^0.11.0",
+    "web-vitals": "^2.1.4",
+    "web3modal": "^1.9.7"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
