--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "crypto-browserify": "^3.12.0",
     "fortmatic": "^2.4.0",
     "https-browserify": "^1.0.0",
+    "merkletreejs": "^0.2.31",
     "next-tick": "^1.1.0",
     "os-browserify": "^0.3.0",
     "react": "^17.0.2",
